k8s-deploy/Deployment.yml
apiVersion: v1
kind: Deployment
metadata:
    labels:
        app: "sharelatex" 
        deployment: "sharelatex"
    name: "sharelatex"
    namespace: "sharelatex-prd"
spec:
        
    replicas: 1
      
    strategy:
        type: "RollingUpdate"
    selector:
      matchLabels:
        app: "sharelatex"
        deployment: "sharelatex"
    template:
        metadata:
            labels:
              app: "sharelatex"
              deployment: "sharelatex"
        spec:
            containers:
                - name: "sharelatex"
                  image: sharelatex:latest
                  imagePullPolicy: Always
                  
                  
                  
                  ports:
                                    
                     - containerPort: 80
                       protocol: TCP
                                                                        
                  
                  resources:        
                    limits:
                      
                      cpu: 6
                                            
                      memory: 6144
                      
                    requests:
                                            
                      cpu: 1
                                            
                      memory: 3072
