k8s-deploy/CreateIngress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: sharelatex
  namespace: sharelatex-prd
spec:
  rules:
    - http:
        paths:
          - path: 
            backend:
              serviceName: sharelatex
              servicePort: 80
